Begin upgrade to JDash 5 and Botrino 1.1